--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           Add your email below to stay up-to-date with announcements and our
           launch deals.
         </p>
-        <div class="hero-form">
+        <form class="hero-form">
           <input
             class="email-input"
             type="email"
@@ -65,7 +65,7 @@
           <p id="error-message" class="error-message">
             Please provide a valid email
           </p>
-        </div>
+        </form>
       </div>
     </main>
     <footer class="attribution">
